--- a/src/javascrit_vanilla/styles.css
+++ b/src/javascrit_vanilla/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Muli', sans-serif;
   /* background: #8f57fd; */
 }
-
+/* 
 .header {
   align-items: center;
   background: #8f57fd;
@@ -82,7 +82,7 @@ body {
   position: absolute;
   padding-left: 30px;
   width: 100%;
-}
+} */
 
 .carousel {
   overflow: scroll;
@@ -116,8 +116,8 @@ body {
   overflow: hidden;
   position: relative;
   display: inline-block;
-  width: 200px;
-  height: 250px;
+  width: 130px;
+  height: 230px;
   margin-right: 10px;
   font-size: 20px;
   cursor: pointer;
@@ -174,6 +174,15 @@ body {
   margin: 3px 0px;
 }
 
+.carousel-item h1{
+  margin: 0px 0px 0px 8px;
+  font-size: 14px;
+}
+.carousel-item h2{
+  padding: 0;
+  margin: 0px 0px 0px 8px;
+  font-size: 14px;
+}
 .footer {
   align-items: center;
   background-color: #8f57fd;
@@ -182,7 +191,7 @@ body {
   width: 100%;
 }
 
-.footer a {
+/* .footer a {
   color: white;
   cursor: pointer;
   font-size: 14px;
@@ -206,7 +215,7 @@ body {
   outline: none;
   padding: 0px 20px;
   width: 70%;
-}
+} */
 
 ::placeholder {
   color: white;
