--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+
 *{
   background-color:#fbfbfb;
 
@@ -56,10 +57,74 @@
 
  .Carrossel_1{
   width: 100%;
-  height: 200px;
-  background-color: tomato;
+  height: 310px;
+  margin: 0px 0px 60px 0px;
 
  }
+
+ #app_1{
+  width: 100%;
+  display: flex;
+  /* flex-direction: row; */
+
+}
+#app_2{
+  width: 100%;
+  display: flex;
+  /* flex-direction: row; */
+
+}
+.contenedor{
+  margin: 10px 10px 10px 10px;
+  width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start; */
+  box-sizing: border-box;
+  font-size: 15px;
+  background-color:#e4dede;
+
+  -o-object-fit: cover;
+     object-fit: cover;
+    
+}
+.imagen{
+  margin-top: 15px;
+  width: 160px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  filter: brightness(1.1);
+  mix-blend-mode: multiply;
+  box-sizing: border-box;
+}
+.titulo{
+  width: 250px;
+  height: 100px;
+  margin-top: 10px;
+  margin-left: 10px;
+  box-sizing: border-box;
+  font-size: 14px;
+  filter: brightness(1.1);
+  mix-blend-mode: multiply;
+}
+.precio{
+  width: 200px;
+  height: 100;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  filter: brightness(1.1);
+  mix-blend-mode: multiply;
+  
+}
  /* //////////////////////////////// */
  .Container_2{
   width: 100%;
